# fuel-nailgun-extension-cluster-upgrade

./: .coveragerc  .gitreview  AUTHORS  CONTRIBUTING.rst  README.rst  setup.cfg  test-requirements.txt  tox.ini
cluster_upgrade/: __init__.py  extension.py  handlers.py  upgrade.py  utils.py  validators.py
cluster_upgrade/objects/: adapters.py  relations.py
cluster_upgrade/tests/: __init__.py  base.py  test_cluster_tranformer.py  test_extension.py  test_handlers.py  test_transformations.py  test_transformers.py  test_upgrade.py  test_validators.py
cluster_upgrade/transformations/: __init__.py  cluster.py  vip.py  vips.py  volumes.py
specs/: fuel-nailgun-extension-cluster-upgrade.spec
