[metadata]
name = fuel-nailgun-extension-cluster-upgrade
summary = Cluster upgrade extension for Fuel
description-file = README.rst
author = Mirantis Inc.
author-email = product@mirantis.com
home-page = http://mirantis.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    cluster_upgrade

[entry_points]
nailgun.extensions =
    cluster_upgrade = cluster_upgrade.extension:ClusterUpgradeExtension
nailgun.cluster_upgrade.transformations.volumes.6.1 =
    node_volumes = cluster_upgrade.transformations.volumes:transform_node_volumes
nailgun.cluster_upgrade.transformations.cluster.9.0 =
    dns_list = cluster_upgrade.transformations.cluster:transform_dns_list
    ntp_list = cluster_upgrade.transformations.cluster:transform_ntp_list
    drop_provision = cluster_upgrade.transformations.cluster:drop_generated_provision
nailgun.cluster_upgrade.transformations.vip.7.0 =
    transform_vips = cluster_upgrade.transformations.vip:transform_vips
